fixed issue# 15, 16,18. tall tablet #3, phone #4, subpage #5

--- a/source/embed-sdk.html
+++ b/source/embed-sdk.html
@@ -55,15 +55,11 @@ title: DC Platform Tools SDK
               </div>
             </div>
             <!-- Shared with code area -->
-            <div class="work-flow-menu-support work-flow-support-mode-mobile">
+            <div class="work-flow-menu-support work-flow-support-mode-mobile open">
               <h4>Embed Modes</h4>
               <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
 
-              <div class="gizzmo-Cta-links all-capability no-flex-justify">
-                <a href="#" class="spectrum-Button spectrum-Button--secondary  mobile-no-button">
-                  <span class="spectrum-Button-label">See Documentation</span>
-                </a>
-              </div>
+              <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -158,13 +154,20 @@ title: DC Platform Tools SDK
               <a href="#" class="button-link">See Documentation</a>
             </div>
 
-
           </li>
         </ul>
       </div>
 
       <div class="work-flow_code">
-        <div id="sdk-support" class="menu-item-info-content"></div>
+        <div id="sdk-support" class="menu-item-info-content">
+          <div class="work-flow-menu-support">
+            <h4>Embed Modes</h4>
+            <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
+
+            <a href="#" class="button-link">See Documentation</a>
+
+          </div>
+        </div>
         <div class="sdk-embed-wrapper">
           <img src="assets/wfl-placeholder.jpg" />
         </div>
