--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@ title: DC Platform Tools SDK
     <h3>Sample multi-step PDF workflow</h3>
 
     <div class="work-flow-container">
-      <div class="work-flow_menu">
+      <div id="home-menu" class="work-flow_menu">
         <ul>
           <li class="dctsdk active">
             <div class="work-flow-menu-item active">
@@ -273,7 +273,7 @@ title: DC Platform Tools SDK
       <div class="dcs-help-container">
         <h3>We're ready to help</h3>
         <p>
-          Have questions about the Document Cloud SDKs?<a href="#"> Contact us</a>
+          Have questions about the Document Services APIs?<a href="#"> Contact us</a>
         </p>
 
         <p>
