--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -185,7 +185,7 @@ title: DC Platform Tools SDK
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Replace/h4>
+              <h4>Replace</h4>
               <p class="work-flow-menu-support-copy">Replace, including static and dynamic HTML; Microsoft Word, PowerPoint,
              and Excel; as well as text, image, and, Zip</p>
               <a href="#" class="button-link">See Documentation</a>
