Content updates to all pages
Updates provided by Rusty via the "Adobe IO Page Content v3" Google Slides doc.

--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@ title: DC Platform Tools SDK
 
 
     <div id="slab-text" class="slab-wrapper">
-      <h1 class="slab_title home-slab">APIs for embedded viewing & manipulation of PDFs</h1>
+      <h1 class="slab_title home-slab">APIs for embedded viewing and manipulation of PDFs</h1>
       <h2 class="slab-copy home-slab">from the company that invented the standard</h2>
     </div>
 
@@ -43,8 +43,8 @@ title: DC Platform Tools SDK
 
     <div class="card blanche">
       <h2>PDF Embed API to insert PDFs and enable collaboration in web apps</h2>
-      <p>Leverage the JavaScript API to embed PDFs without additional downloads or plugins. </p>
-      <p>Provide a uniform PDF viewing experience and easily enable digital collaboration and document analytics.</p>
+      <p>Leverage the free JavaScript API to embed PDFs without the need for end users to download additional plugins.</p>
+      <p>Provide a rich PDF viewing experience and easily enable digital collaboration and document analytics.</p>
       <div class="callout-item">
         <p>
           <a href="#">Try the demo</a>
@@ -53,12 +53,12 @@ title: DC Platform Tools SDK
     </div>
 
     <div class="card blanche">
-      <h2>PDF Tools API for single task or to build end-to-end workflows</h2>
-      <p>Use the Node.js, .NET, and Java to quickly solve specific challenges or power multi-step PDF business processes.</p>
-      <p>Apply OCR to enable searching, easily convert files (PPT to PDF, PDF to Microsoft Word and more), or combine actions to automate workflows.</p>
+      <h2>PDF Tools API for web services to manipulate PDFs in document workflows</h2>
+      <p>Use the PDF Tools API to quickly solve specific challenges or power multi-step document workflows, with SDKs for Node.js, Java, and .NET.</p>
+      <p>Apply OCR to enable searching, easily convert files (HTML to PDF, PDF to Microsoft Word and more), or combine actions to automate workflows.</p>
       <div class="callout-item">
         <p>
-          <a href="#">Learn more</a>&nbsp;&nbsp;<a href="#">Get started</a>
+          <a href="#">Learn more</a>&nbsp;&nbsp;<a href="#">Get Started</a>
         </p>
       </div>
     </div>
@@ -197,14 +197,12 @@ title: DC Platform Tools SDK
         <p>
           <img src="assets/img/logo-socialstatus-lrg.png">
         </p>
-        <h4>Enhancing the End User Experience</h4>
 
         <p>
-          Adobe Experience Manager customers can easily drag and drop a high-fidelity PDF viewer directly into web applications without the need for additional code or customizations. Includes pre-configurable settings for comments, printing,
-          downloading, and integrated Adobe Analytics.
+          &ldquo;Our clients wanted to create PDFs of our reports and the open source solution we tried was difficult to work with and unreliable.  We switched to the Adobe Services SDK because it produced higher quality PDFs and also let our clients convert to PowerPoint to customize reports for their audience.&rdquo;
         </p>
         <p>
-          – Tim Hill, CEO & Co-Founder, Social Status
+          <strong>– Tim Hill, CEO & Co-Founder, Social Status</strong>
         </p>
 
       </div>
@@ -214,31 +212,12 @@ title: DC Platform Tools SDK
         <p>
           <img src="assets/img/logo-socialstatus-lrg.png">
         </p>
-        <h4>Enhancing the End User Experience</h4>
 
         <p>
-          Adobe Experience Manager customers can easily drag and drop a high-fidelity PDF viewer directly into web applications without the need for additional code or customizations. Includes pre-configurable settings for comments, printing,
-          downloading, and integrated Adobe Analytics.
+          &ldquo;We are committed to building superior collaboration and user experiences on our platform, and with PDF APIs from Adobe, we enabled the world’s best document experiences with ease— right within the Acumatica ERP solution.&rdquo;
         </p>
         <p>
-          – Tim Hill, CEO & Co-Founder, Social Status
-        </p>
-
-      </div>
-
-      <div class="card">
-
-        <p>
-          <img src="assets/img/logo-socialstatus-lrg.png">
-        </p>
-        <h4>Enhancing the End User Experience</h4>
-
-        <p>
-          Adobe Experience Manager customers can easily drag and drop a high-fidelity PDF viewer directly into web applications without the need for additional code or customizations. Includes pre-configurable settings for comments, printing,
-          downloading, and integrated Adobe Analytics.
-        </p>
-        <p>
-          - Tim Hill, CEO & Co-Founder, Social Status
+         <strong>– John Roskill, CEO, Acumatica Cloud ERP</strong>
         </p>
 
       </div>
@@ -246,8 +225,6 @@ title: DC Platform Tools SDK
     </div>
 
   </section>
-
-
 
 
 
@@ -273,7 +250,7 @@ title: DC Platform Tools SDK
       <div class="dcs-help-container">
         <h3>We're ready to help</h3>
         <p>
-          Have questions about the Document Services APIs?<a href="#"> Contact us</a>
+          Have questions about the Document Services APIs? <a href="#">Contact us</a>
         </p>
 
         <p>
