--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -11,40 +11,34 @@ title: DC Platform Tools SDK
       <h2>with SDKs for popular languages such as Node.js, Java, and .NET</h2>
     </section>
 
-
     <section class="home-card card-slider-container">
-
       <div class="card blanche">
         <div class="card-icon"><img src="assets/svg/create_secure_support.svg"></div>
-        <h2>Create, secure &amp; export PDF documents</h2>
+        <h2>Create, secure, and export PDF documents</h2>
         <p>Create a PDF from Microsoft Office documents, protect the content, and export to other formats</p>
       </div>
 
       <div class="card blanche">
         <div class="card-icon"><img src="assets/svg/modify_pages.svg"></div>
-        <h2>Modify pages &amp; optimize output</h2>
-        <p>Choose exactly how to display a PDF and use the callbacks and annotations APIs to provide programmatic control and enable digital collaboration</p>
+        <h2>Modify PDFs and optimize output</h2>
+        <p>Programmatically alter a document, such as reordering, inserting, and rotating pages, as well as compressing the file</p>
       </div>
 
       <div class="card blanche">
         <div class="card-icon"><img src="assets/svg/cloud_services.svg"></div>
         <h2>Leverage Adobe's cloud-based services</h2>
         <p>Access the same cloud-based APIs that power Adobe's end user applications to quickly deliver scalable, secure solutions</p>
-
       </div>
     </section>
   </div>
 
-
-
   <!-- work-flow-->
   <section class="dctsdk-work-flow">
-
     <h3>Key Features of Our PDF Tools API</h3>
-
     <div class="work-flow-container">
       <div class="work-flow_menu">
         <ul>
+          <!-- Create -->
           <li class="dctsdk active">
             <div class="work-flow-menu-item ">
               <div class="chev-arrow-right"></div>
@@ -53,16 +47,15 @@ title: DC Platform Tools SDK
                 <div class="work-flow-menu-copy">Create</div>
               </div>
             </div>
-
             <!-- Shared with code area -->
             <div class="work-flow-menu-support work-flow-support-mode-mobile open">
               <h4>Create a PDF File</h4>
               <p class="work-flow-menu-support-copy">Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
               <a href="#" class="button-link">See Documentation</a>
             </div>
-
           </li>
 
+          <!-- Export -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -71,18 +64,15 @@ title: DC Platform Tools SDK
                 <div class="work-flow-menu-copy">Export</div>
               </div>
             </div>
-
             <!-- Shared with code area -->
             <div id="export" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Export</h4>
-              <p class="work-flow-menu-support-copy">
-                Export, including static and dynamic HTML; Microsoft Word, PowerPoint,
-                and Excel; as well as text, image, and, Zip
-              </p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Convert existing PDFs to popular formats, such as Microsoft Word, Excel, and PowerPoint, as well as text and image</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
+
+          <!-- OCR / Recognize -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -97,65 +87,101 @@ title: DC Platform Tools SDK
               <h4>Recognize Text</h4>
               <p class="work-flow-menu-support-copy">Recognize Text, including static and dynamic HTML; Microsoft Word, PowerPoint,
              and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
+
+          <!-- Protect -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk protect" title="Protect PDF"></div>
-                <div class="work-flow-menu-copy">Protect PDF</div>
+                <div class="work-flow-menu-copy">Protect</div>
               </div>
             </div>
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Protect PDF</h4>
-              <p class="work-flow-menu-support-copy">Protect PDF, including static and dynamic HTML; Microsoft Word, PowerPoint,
-             and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <h4>Protect</h4>
+              <p class="work-flow-menu-support-copy">Set and enforce passwords for opening and viewing PDFs</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
 
-           <li class="dctsdk">
+          <!-- Combine *new* -->
+          <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk reorder" title="Reorder Pages"></div>
-                <div class="work-flow-menu-copy">Reorder Pages</div>
+                <div class="work-flow-menu-copy">Combine</div>
               </div>
             </div>
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Reorder Pages</h4>
-              <p class="work-flow-menu-support-copy">Reorder Pages, including static and dynamic HTML; Microsoft Word, PowerPoint,
-             and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <h4>Combine</h4>
+              <p class="work-flow-menu-support-copy">Combine two or more documents into a single PDF</p>
+              <a href="#" class="button-link">See sample code</a>
+            </div>
+          </li>
+
+          <!-- Compress *new* -->
+          <li class="dctsdk">
+            <div class="work-flow-menu-item">
+              <div class="chev-arrow-right"></div>
+              <div class="shadow-box dctsdk">
+                <div class="work-flow-icon icon-align dctsdk reorder" title="Reorder Pages"></div>
+                <div class="work-flow-menu-copy">Compress</div>
+              </div>
             </div>
 
+            <!-- Shared with code area -->
+            <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
+              <h4>Compress</h4>
+              <p class="work-flow-menu-support-copy">duce the size of PDFs while determining the quality of images and graphics </p>
+              <a href="#" class="button-link">See sample code</a>
+            </div>
           </li>
+
+          <!-- Reorder -->
+          <li class="dctsdk">
+            <div class="work-flow-menu-item">
+              <div class="chev-arrow-right"></div>
+              <div class="shadow-box dctsdk">
+                <div class="work-flow-icon icon-align dctsdk reorder" title="Reorder Pages"></div>
+                <div class="work-flow-menu-copy">Reorder</div>
+              </div>
+            </div>
+
+            <!-- Shared with code area -->
+            <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
+              <h4>Reorder</h4>
+              <p class="work-flow-menu-support-copy">Reorder the pages of an existing document</p>
+              <a href="#" class="button-link">See sample code</a>
+            </div>
+          </li>
+
+          <!-- Linearize -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk linearize" title="Linearize PDF"></div>
-                <div class="work-flow-menu-copy">Linearize PDF</div>
+                <div class="work-flow-menu-copy">Linearize</div>
               </div>
             </div>
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Linearize PDF</h4>
-              <p class="work-flow-menu-support-copy">Linearize PDF, including static and dynamic HTML; Microsoft Word, PowerPoint,
-             and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <h4>Linearize</h4>
+              <p class="work-flow-menu-support-copy">Optimize PDFs for quick viewing on the web, especially for mobile clients</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
+
+          <!-- Insert -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -165,15 +191,15 @@ title: DC Platform Tools SDK
               </div>
             </div>
 
-          <!-- Shared with code area -->
-          <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-            <h4>Insert</h4>
-            <p class="work-flow-menu-support-copy">Insert, including static and dynamic HTML; Microsoft Word, PowerPoint,
-            and Excel; as well as text, image, and, Zip</p>
-            <a href="#" class="button-link">See Documentation</a>
-          </div>
-
+            <!-- Shared with code area -->
+            <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
+              <h4>Insert</h4>
+              <p class="work-flow-menu-support-copy">Insert one or more pages into an existing document</p>
+              <a href="#" class="button-link">See sample code</a>
+            </div>
           </li>
+
+          <!-- Replace -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -186,12 +212,12 @@ title: DC Platform Tools SDK
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Replace</h4>
-              <p class="work-flow-menu-support-copy">Replace, including static and dynamic HTML; Microsoft Word, PowerPoint,
-             and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Replace one or more pages with another page</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
+
+          <!-- Delete -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -204,13 +230,12 @@ title: DC Platform Tools SDK
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Delete</h4>
-              <p class="work-flow-menu-support-copy">Delete, including static and dynamic HTML; Microsoft Word, PowerPoint,
-              and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Delete one or more pages from a document</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
-
           </li>
+
+          <!-- Rotate -->
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -223,11 +248,9 @@ title: DC Platform Tools SDK
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Rotate</h4>
-              <p class="work-flow-menu-support-copy">Rotate, including static and dynamic HTML; Microsoft Word, PowerPoint,
-              and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Rotate a page in an existing document</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
 
         </ul>
@@ -238,7 +261,7 @@ title: DC Platform Tools SDK
             <div class="work-flow-menu-support">
               <h4>Create a PDF File</h4>
               <p class="work-flow-menu-support-copy">Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <a href="#" class="button-link">See sample code</a>
             </div>
         </div>
         <div class="sdk-embed-wrapper">
@@ -272,7 +295,7 @@ title: DC Platform Tools SDK
       <li>
         <div>
           <p>
-            Download sample files for JavaScript, Node.js and .NET
+            Download ready to run samples for Node.js, Java, and .NET
           </p>
           <p class="gs-callout-item">
             <a title="Node.js" alt="Node.js" href="#" class="button-link">Node.js</a>
@@ -286,7 +309,7 @@ title: DC Platform Tools SDK
             Add credentials to your code and run
           </p>
           <p>
-            <a title="See documentation" alt="See documentation" href="#" class="button-link">See Documentation</a>
+            <a title="See documentation" alt="See documentation" href="#" class="button-link">See documentation</a>
           </p>
         </div>
       </li>
@@ -297,28 +320,27 @@ title: DC Platform Tools SDK
 
   <!-- use case -->
   <section class="use-case">
-    <h3>Use Cases for PDF Embed API</h3>
+    <h3>Use Cases for PDF Tools API</h3>
 
     <div>
-      <h4>Document Collaboration</h4>
-      <h5>Create compelling work-at-home experiences with PDF Embed API:</h5>
+      <h4>Document Management</h4>
+      <h5>Programmatically manage document workflows through high performance, cloud-based APIs:</h5>
       <ul>
-        <li>Enable real-time team collaboration using comments, highlighting, and drawing tools</li>
-        <li>Analyze usage statistics to gain insights into document consumption and interaction patterns</li>
+        <li>Create PDF documents from dynamic or static html content, such as web forms, charts</li>
+        <li>Secure PDF documents in the embedded PDF viewer and disable printing, downloading, and document manipulation</li>
       </ul>
-      <h5>Common use cases: Insurance workflows, publishing applications</h5>
+      <h5>Common use cases: Manufacturing operations, government workflows</h5>
     </div>
 
     <div>
-      <h4>Reporting</h4>
-      <h5>Use PDF Embed API to generate custom reports:</h5>
+      <h4>Business Process Automation</h4>
+      <h5>Eliminate manual processes with automated workflows through powerful PDF APIs:</h5>
       <ul>
-        <li>Provide consistent, embedded PDF viewing with analytics</li>
-        <li>Integrate callbacks to provide event driven chats with helpful tips, information links, and context specific details</li>
+        <li>Automate document workflows through programmatic creation and manipulation of PDF files from digital assets</li>
+        <li>Streamline sharing of attachments and consumption of PDF documents for fast web viewing</li>
       </ul>
-      <h5>Common use cases: Financial reports, real estate transactions</h5>
+      <h5>Common use cases: Retail sales and invoicing, eLearning systems</h5>
     </div>
-
 
     <p>Learn about our <a href="#" class="section-links">PDF Embed API</a> to embed high-fidelity PDFs and control appearance, enable collaboration, and see analytics</p>
 
