--- a/source/embed-sdk.html
+++ b/source/embed-sdk.html
@@ -14,29 +14,25 @@ title: DC Platform Tools SDK
 
 
     <section class="home-card card-slider-container">
-
       <div class="card blanche">
         <div class="card-icon"><img src="assets/svg/accurate_rendering.svg"></div>
-        <h2>Create, secure & export PDF documents</h2>
+        <h2>Accurate, consistent PDF rendering</h2>
         <p>Whether on dynamic or static pages, deliver the highest quality PDF rendering available</p>
       </div>
 
       <div class="card blanche ">
         <div class="card-icon push-down"><img src="assets/svg/customizable_experience.svg"></div>
-        <h2>Modify pages & optimize output</h2>
+        <h2>Customizable user experience</h2>
         <p>Choose exactly how to display a PDF and use the callbacks and annotations APIs to provide programmatic control and enable digital collaboration</p>
       </div>
 
       <div class="card blanche">
         <div class="card-icon push-down"><img src="assets/svg/analytics.svg"></div>
-        <h2>Leverage Adobe’s cloud-based services</h2>
+        <h2>Analytics on PDF usage</h2>
         <p>Use analytics to understand how users interact with PDFs, including time spent on a page and searches</p>
-
       </div>
     </section>
   </div>
-
-
 
   <!-- work-flow-->
   <section class="dctsdk-work-flow">
@@ -57,10 +53,8 @@ title: DC Platform Tools SDK
             <!-- Shared with code area -->
             <div class="work-flow-menu-support work-flow-support-mode-mobile open">
               <h4>Embed Modes</h4>
-              <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-
-              <a href="#" class="button-link">See Documentation</a>
-
+              <p class="work-flow-menu-support-copy">Control how you embed PDFs, with support for full-sized windows, sized containers, in-line display, and lightboxes</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
           </li>
 
@@ -76,13 +70,13 @@ title: DC Platform Tools SDK
             <div id="export" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Annotations</h4>
               <p class="work-flow-menu-support-copy">
-                Annotations, including static and dynamic HTML; Microsoft Word, PowerPoint,
-                and Excel; as well as text, image, and, Zip
+                Full support for import, create, delete, update, exporting of comments, and more; programmatically add, update, and delete annotations with the option to save; 
+                events can be triggered based on user actions 
               </p>
-              <a href="#" class="button-link">See Documentation</a>
-
+              <a href="#" class="button-link">See sample code</a>
             </div>
           </li>
+
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -91,15 +85,14 @@ title: DC Platform Tools SDK
                 <div class="work-flow-menu-copy">PDF Analytics</div>
               </div>
             </div>
-
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>PDF Analytics</h4>
-              <p class="work-flow-menu-support-copy">PDF Analytics, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Easily integrate Adobe Analytics with only a few steps, or leverage the user events to push data to other analytics tools</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
           </li>
+
           <li class="dctsdk">
             <div class="work-flow-menu-item">
               <div class="chev-arrow-right"></div>
@@ -108,15 +101,12 @@ title: DC Platform Tools SDK
                 <div class="work-flow-menu-copy">Collaborative Settings</div>
               </div>
             </div>
-
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Collaborative Settings</h4>
-              <p class="work-flow-menu-support-copy">Collaborative Settings, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">For multi-user document collaboration, identify reviewers by name or email address and save annotation settings through custom callbacks (default settings display GUEST as the reviewer name for all comments)</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
-
           </li>
 
           <li class="dctsdk">
@@ -127,15 +117,12 @@ title: DC Platform Tools SDK
                 <div class="work-flow-menu-copy">Save Controls</div>
               </div>
             </div>
-
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Save Controls</h4>
-              <p class="work-flow-menu-support-copy">Save Controls, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <p class="work-flow-menu-support-copy">Support auto-save to local drives or external storage, with options for frequency and polling, along with success/fail events capture; use file modification and status polling events for multi-user workflows</p>
+              <a href="#" class="button-link">See sample code</a>
             </div>
-
-
           </li>
 
           <li class="dctsdk">
@@ -149,40 +136,34 @@ title: DC Platform Tools SDK
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Menu & Tool Options</h4>
-              <p class="work-flow-menu-support-copy">Menu & Tool Options, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <a href="#" class="button-link">See Documentation</a>
+              <h4>Menu &amp; Tool Options</h4>
+              <p class="work-flow-menu-support-copy">Programmatically enable or disable the left-hand panel, comments pane, toolbars, print, and download options</p>
+              <!--<a href="#" class="button-link">See Documentation</a>-->
             </div>
-
           </li>
         </ul>
       </div>
-
-      <div class="work-flow_code">
-        <div id="sdk-support" class="menu-item-info-content">
-          <div class="work-flow-menu-support">
-            <h4>Embed Modes</h4>
-            <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-
-            <a href="#" class="button-link">See Documentation</a>
-
+      <!-- This is not in the v3 reference document
+        <div class="work-flow_code">
+          <div id="sdk-support" class="menu-item-info-content">
+            <div class="work-flow-menu-support">
+              <h4>Embed Modes</h4>
+              <p class="work-flow-menu-support-copy">Embed Modes, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
+              <a href="#" class="button-link">See Documentation</a>
+            </div>
+          </div>
+          <div class="sdk-embed-wrapper">
+            <img src="assets/wfl-placeholder.jpg" />
           </div>
         </div>
-        <div class="sdk-embed-wrapper">
-          <img src="assets/wfl-placeholder.jpg" />
-        </div>
-      </div>
-
+      -->
     </div>
-
   </section>
   <!-- work-flow end -->
 
   <!-- Get Started start -->
   <section class="grey-bar get-started">
-
     <h3>Get Started in Minutes</h3>
-
     <ol>
       <li>
         <div>
@@ -215,37 +196,24 @@ title: DC Platform Tools SDK
         </div>
       </li>
     </ol>
-
   </section>
   <!-- Get Started end -->
 
   <!-- Integrations start -->
   <section class="integrations">
     <h3>Integrations</h3>
-
     <div>
       <span class="card-icon"><img src="assets/img/adobe_exerience_manager_logo@2x.png"></span>
       <h4>Adobe Experience Manager</h4>
-
-      <p>Adobe Experience Manager customers can easily drag and drop a high-fidelity PDF viewer directly into web applications without the need for additional code or customizations. Includes pre-configurable settings for comments, printing,
-        downloading, and integrated Adobe Analytics.</p>
-
+      <p>Adobe Experience Manager customers can easily drag and drop a high-fidelity PDF viewer directly into web applications without the need for additional code or customizations. Includes pre-configurable settings for comments, printing, downloading, and integrated Adobe Analytics.</p>
       <p class="callout-item"><a href="#">Learn more</a></p>
-
     </div>
-
-
-
     <div>
       <span class="card-icon"><img src="assets/img/adobe-analytics@2x.png"></span>
       <h4>Adobe Analytics</h4>
-
       <p>Out of the box Adobe Analytics integration allows customers to seamlessly enable rich analytics and gain insights on end user experience or extend additional functionality based on user interactions.</p>
-
       <p class="callout-item"><a href="#">Learn more</a></p>
-
     </div>
-
   </section>
   <!-- Integrations end -->
 
@@ -273,10 +241,7 @@ title: DC Platform Tools SDK
       <h5>Common use cases: Financial reports, real estate transactions</h5>
     </div>
 
-
-
     <p>Learn about our <a href="#" class="section-links">PDF Tools API</a> for programmatic document manipulation</p>
-
 
   </section>
   <!-- use case end -->
