Content: Recognize became OCR

--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -78,13 +78,13 @@ title: DC Platform Tools SDK
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk recognize" title="Recognize Text"></div>
-                <div class="work-flow-menu-copy">Recognize Text</div>
+                <div class="work-flow-menu-copy">OCR</div>
               </div>
             </div>
 
             <!-- Shared with code area -->
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
-              <h4>Recognize Text</h4>
+              <h4>OCR</h4>
               <p class="work-flow-menu-support-copy">Recognize Text, including static and dynamic HTML; Microsoft Word, PowerPoint,
              and Excel; as well as text, image, and, Zip</p>
               <a href="#" class="button-link">See sample code</a>
