making sure I added all files

--- a/source/index.html
+++ b/source/index.html
@@ -30,9 +30,11 @@ title: DC Platform Tools SDK
 
 
 
-    <div id="slab-text" class="slab-wrapper">
-      <h1 class="slab_title home-slab">APIs for embedded viewing and manipulation of PDFs</h1>
-      <h2 class="slab-copy home-slab">from the company that invented the standard</h2>
+    <div id="slab-text" class="slab-header-copy-wrapper">
+      <div class="slab-header">
+        <h1>APIs for embedded viewing and manipulation of PDFs</h1>
+        <h2>from the company that invented the standard</h2>
+      </div>
     </div>
 
   </section>
@@ -85,8 +87,7 @@ title: DC Platform Tools SDK
             <div class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Create PDF from Word</h4>
               <p>Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-
-              <p><a title="See documentation" alt="See documentation" id="see_docs" href="#" class="button-link">See documentation</a></p>
+              <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -106,12 +107,7 @@ title: DC Platform Tools SDK
                 Combine multiple PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint,
                 and Excel; as well as text, image, and, Zip
               </p>
-
-              <div class="gizzmo-Cta-links all-capability no-flex-justify">
-                <a href="#" class="button-link  mobile-no-button">
-                  <span class="spectrum-Button-label">See Documentation</span>
-                </a>
-              </div>
+              <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -128,12 +124,7 @@ title: DC Platform Tools SDK
               <h4>Password protect the PDF</h4>
               <p class="work-flow-menu-support-copy">
                 Password protect the PDF, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-              <!-- <div class="all-capability"><a href="#">See Documentation</a></div> -->
-              <div class="gizzmo-Cta-links all-capability no-flex-justify">
-                <a href="#" class="button-link  mobile-no-button">
-                  <span class="spectrum-Button-label">See Documentation</span>
-                </a>
-              </div>
+                <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -149,12 +140,7 @@ title: DC Platform Tools SDK
             <div id="pdf-embed" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Embed PDF for viewing and analytics</h4>
               <p class="work-flow-menu-support-copy">Embed PDF for viewing and analytics, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
-
-              <div class="gizzmo-Cta-links all-capability no-flex-justify">
-                <a href="#" class="button-link  mobile-no-button">
-                  <span class="spectrum-Button-label">See Documentation</span>
-                </a>
-              </div>
+              <a href="#" class="button-link">See Documentation</a>
 
             </div>
           </li>
@@ -164,7 +150,8 @@ title: DC Platform Tools SDK
       </div>
 
       <div id="code-screen" class="work-flow_code">
-        <div id="sdk-support" class="menu-item-info-content">
+        <!-- We're not displaying copy above the code section on the home page-->
+       <!--<div id="sdk-support" class="menu-item-info-content">
           <div class="work-flow-menu-support">
             <h4>Create PDF from Word</h4>
             <p>Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
@@ -172,7 +159,7 @@ title: DC Platform Tools SDK
             <p><a title="See documentation" alt="See documentation" id="see_docs" href="#" class="button-link">See documentation</a></p>
 
           </div>
-        </div>
+        </div>-->
         <div class="sdk-embed-wrapper">
           <img src="assets/wfl-placeholder.jpg" />
         </div>
