--- a/source/embed-sdk.html
+++ b/source/embed-sdk.html
@@ -138,12 +138,12 @@ title: DC Platform Tools SDK
             <div id="OCR" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Menu &amp; Tool Options</h4>
               <p class="work-flow-menu-support-copy">Programmatically enable or disable the left-hand panel, comments pane, toolbars, print, and download options</p>
-              <!--<a href="#" class="button-link">See Documentation</a>-->
+             <a href="#" class="button-link">See Documentation</a>
             </div>
           </li>
         </ul>
       </div>
-      <!-- This is not in the v3 reference document
+      <!-- This is not in the v3 reference document -->
         <div class="work-flow_code">
           <div id="sdk-support" class="menu-item-info-content">
             <div class="work-flow-menu-support">
@@ -156,7 +156,6 @@ title: DC Platform Tools SDK
             <img src="assets/wfl-placeholder.jpg" />
           </div>
         </div>
-      -->
     </div>
   </section>
   <!-- work-flow end -->
