fixed a typo for Chris

--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -7,7 +7,7 @@ title: DC Platform Tools SDK
 
   <div class="gradient">
     <section class="header">
-      <h1>Use our PDF Tools API for creating, combing,<br>exporting PDFs and more</h1>
+      <h1>Use our PDF Tools API for creating, combining,<br>exporting PDFs and more</h1>
       <h2>with SDKs for popular languages such as Node.js, Java, and .NET</h2>
     </section>
 
