Adding turn carat animation

--- a/source/embed-sdk.html
+++ b/source/embed-sdk.html
@@ -43,7 +43,7 @@ title: DC Platform Tools SDK
       <div class="work-flow_menu">
         <ul>
           <li class="dctsdk active">
-            <div class="work-flow-menu-item">
+            <div class="work-flow-menu-item open">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk embed" title="Embed Modes"></div>
@@ -70,8 +70,8 @@ title: DC Platform Tools SDK
             <div id="export" class="work-flow-menu-support work-flow-support-mode-mobile">
               <h4>Annotations</h4>
               <p class="work-flow-menu-support-copy">
-                Full support for import, create, delete, update, exporting of comments, and more; programmatically add, update, and delete annotations with the option to save; 
-                events can be triggered based on user actions 
+                Full support for import, create, delete, update, exporting of comments, and more; programmatically add, update, and delete annotations with the option to save;
+                events can be triggered based on user actions
               </p>
               <a href="#" class="button-link">See sample code</a>
             </div>
