--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -40,7 +40,7 @@ title: DC Platform Tools SDK
         <ul>
           <!-- Create -->
           <li class="dctsdk active">
-            <div class="work-flow-menu-item ">
+            <div class="work-flow-menu-item open">
               <div class="chev-arrow-right"></div>
               <div class="shadow-box dctsdk">
                 <div class="work-flow-icon icon-align dctsdk create" title="Create PDF from Word doc"></div>
