fixes from the bug list global 3,4,7,8,9, Adobe-io: 3, 4, subpage-template, emdeb-sdk: 1, 4

--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: DC Platform Tools SDK
+title: PDF Library | Adobe Document Services
 ---
 
 <div class="main">
@@ -28,8 +28,6 @@ title: DC Platform Tools SDK
       </div>
     </div>
 
-
-
     <div id="slab-text" class="slab-header-copy-wrapper">
       <div class="slab-header">
         <h1>APIs for embedded viewing and manipulation of PDFs</h1>
@@ -38,8 +36,6 @@ title: DC Platform Tools SDK
     </div>
 
   </section>
-
-
 
   <section class="home-card">
 
@@ -186,10 +182,16 @@ title: DC Platform Tools SDK
         </p>
 
         <p>
-          &ldquo;Our clients wanted to create PDFs of our reports and the open source solution we tried was difficult to work with and unreliable.  We switched to the Adobe Services SDK because it produced higher quality PDFs and also let our clients convert to PowerPoint to customize reports for their audience.&rdquo;
+          &ldquo;Adobe Document Services helped us extend K2’s intelligent process automation solution to enable 
+          integrated PDF document creation with a rich, interactive web experience for document review, 
+          approval, and e-signature processes with Adobe Sign. Our developers were able to easily extend K2 
+          workflows that collect information from multiple data sources using Adobe Document Services APIs, 
+          enabling us to quickly deliver a solution for our customers to automate their document
+          -oriented business processes in
+           a more secure and scalable way.&rdquo;
         </p>
         <p>
-          <strong>– Tim Hill, CEO & Co-Founder, Social Status</strong>
+          <strong>– Alex Cobb, VP Product Management, K2</strong>
         </p>
 
       </div>
@@ -201,14 +203,38 @@ title: DC Platform Tools SDK
         </p>
 
         <p>
-          &ldquo;We are committed to building superior collaboration and user experiences on our platform, and with PDF APIs from Adobe, we enabled the world’s best document experiences with ease— right within the Acumatica ERP solution.&rdquo;
+          &ldquo;With the 99U Conference shifting to an all-virtual format this year, we wanted to make all aspects of the 
+          event accessible to our attendees — especially The Creative Self Workbook, a workbook offering a 
+          chance for deep self-discovery and exploration. The Adobe PDF Embed API allowed us to create an 
+          accessible, seamless PDF experience with live form filling, notes, drawing, downloading, and printing 
+          options with just a few lines of code.&rdquo;
         </p>
         <p>
-         <strong>– John Roskill, CEO, Acumatica Cloud ERP</strong>
+         <strong>– Andrea Rosen, Head of 99U</strong>
         </p>
 
       </div>
 
+      
+      <div class="card">
+
+        <p>
+          <img src="assets/img/logo-socialstatus-lrg.png">
+        </p>
+
+        <p>
+          &ldquo;InfoDesk provides AI-driven technology and tools that enable organizations to make the smartest 
+          decisions confidently. This involves delivering highly relevant insights to our customers in a format that 
+          suits them best so they can harness the value of their information. By using Adobe’s Document Service 
+          API, our customers can easily convert PDF reports to PowerPoint for use in client presentations and 
+          internal stakeholder meetings. At InfoDesk, we are always looking for ways to add value for our clients 
+          and Adobe enables us to do exactly that.&rdquo;
+        </p>
+        <p>
+         <strong>– Lynn Epstein, COO, InfoDesk</strong>
+        </p>
+
+      </div>
     </div>
 
   </section>
