fix chevron missalignment after fixing menu icons

--- a/source/tools-sdk.html
+++ b/source/tools-sdk.html
@@ -48,7 +48,7 @@ title: DC Platform Tools SDK
               </div>
             </div>
             <!-- Shared with code area -->
-            <div class="work-flow-menu-support work-flow-support-mode-mobile open">
+            <div id="create" class="work-flow-menu-support work-flow-support-mode-mobile open">
               <h4>Create a PDF File</h4>
               <p class="work-flow-menu-support-copy">Create PDFs from a variety of formats, including static and dynamic HTML; Microsoft Word, PowerPoint, and Excel; as well as text, image, and, Zip</p>
               <a href="#" class="button-link">See Documentation</a>
